<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">diafyt Lazarus</string>
    <string name="program_line_none" translatable="false">–</string>
    <string name="unit_celsius" translatable="false">°C</string>
    <string name="unit_fahrenheit" translatable="false">°F</string>
    <string name="item_title_diafyt_website">diafyt website</string>
    <string name="button_title_close">Close</string>
    <string name="button_title_use_anyway">Use anyway</string>
    <string name="message_error_nfc_missing">No NFC capability detected. This will not work.</string>
    <string name="dialog_title_no_nfc">NFC missing</string>
    <string name="snackbar_error_nfc_disabled">NFC disabled. Please enable, otherwise nothing will work.</string>
    <string name="tab_title_programming">Install</string>
    <string name="tab_title_temperature">Thermometer</string>
    <string name="image_description_schematic_sensor">sensor outline</string>
    <string name="item_title_dev_toggle">toggle dev view</string>
    <string name="screen_text_dev_diagnose_introduction">Tap a tag</string>
    <string name="tab_title_dev_diagnose">Diagnose</string>
    <string name="button_title_no">No</string>
    <string name="button_title_yes">Yes</string>
    <string name="button_title_ok">OK</string>
    <string name="message_no_libre1">Detected tag different from Libre Freestyle 1. Aborting operation.</string>
    <string name="dialog_title_no_libre1">Wrong tag</string>
    <string name="screen_text_dev_transceive_introduction">Tap a tag</string>
    <string name="tab_title_dev_transceive">Transceive</string>
    <string name="button_transceive_execute">Transceive</string>
    <string name="transceive_input_hint">Bytes to send (excluding checksum)</string>
    <string name="button_transceive_stop">Stop</string>
    <string name="snackbar_transceive_interrupted">NFC transaction was interrupted.</string>
    <string name="transceive_output_hint">Reply</string>
    <string name="snackbar_transceive_error">Error during NFC transaction.</string>
    <string name="text_transceive_connected_tag">Tag-ID: %1$s</string>
    <string name="screen_thermometer_result">%1$s %2$s</string>
    <string name="snackbar_transceive_input_error">Input contains invalid hex chars.</string>
    <string name="snackbar_programming_overlap">NFC operation already in progress.</string>
    <string name="dialog_title_libre1_running">Non-expired Libre 1</string>
    <string name="message_libre1_running">The targeted Libre 1 sensor has not yet expired. Aborting operation.</string>
    <string name="dialog_title_confirm_overwrite">Overwriting programming</string>
    <string name="message_confirm_foreign_overwrite">This sensor has already been reprogrammed with a different image. Are you sure you want to overwrite it?</string>
    <string name="snackbar_nfc_overlap">An NFC operation is already in progress.</string>
    <string name="dialog_title_no_thermometer">Unprogrammed sensor</string>
    <string name="message_no_thermometer">This sensor was not reprogrammed to act as a thermometer.</string>
    <string name="snackbar_programming_successful">Tag successfully reprogrammed as thermometer.</string>
    <string name="snackbar_transceive_input_empty">Nothing to transceive.</string>
    <string name="snackbar_transceive_input_odd">Input contains an odd number of hex chars.</string>
    <string name="text_diagnose_libre_disposition">Status: %1$s</string>
    <string name="text_diagnose_program_key">Program: %1$s</string>
    <string name="text_diagnose_status_tag_id">Tag-ID: %1$s</string>
    <string name="libre_disposition_none">not a Libre 1 tag</string>
    <string name="libre_disposition_nonexpired">non-expired Libre 1 tag</string>
    <string name="libre_disposition_expired">expired Libre 1 tag</string>
    <string name="libre_disposition_reprogrammed">reprogrammed Libre 1 tag</string>
    <string name="program_line_thermometer">thermometer</string>
    <string name="program_line_other">unknown program</string>
    <string name="tab_title_tutorial">Tutorial</string>
    <string name="snackbar_tutorial_nfc_intent">Switch to another screen to interact with a tag.</string>
    <string name="screen_tutorial_step1_disinfect">Disinfect sensor</string>
    <string name="screen_tutorial_step2_remove">Remove filament</string>
    <string name="screen_tutorial_step3_reprogram">Reprogram sensor</string>
    <string name="dialog_title_programmable_sensor">Unprogrammed sensor</string>
    <string name="message_programmable_sensor">The tag is not yet reprogrammed. Visit the tutorial on how to proceed?</string>
    <string name="button_title_go_to_tutorial">Go</string>
    <string name="item_title_lazarus_website">about Lazarus</string>
    <string name="screen_thermometer_read_sensor">Read Sensor</string>
    <string name="about_title">Project Lazarus – Resurrection of an expired Freestyle Libre Sensor</string>
    <string name="about_heading_1">Lazarus in the Holy Scripture</string>
    <string name="about_paragraph_1_1">Lazarus was the brother of Mary and Martha, a friend of Jesus. When Jesus learned that Lazarus had died, he wept over his death; when Jesus came to Betania, today’s al-Eizariya, after four days, Lazarus was raised from the dead by him (John 11: 1–45).</string>
    <string name="about_heading_2">Abstract</string>
    <string name="about_paragraph_2_1">Used, expired Abbott Freestyle Libre® sensors can be programmed with a smartphone app. This gives the sensors new functional properties. The original purpose as CGM is lost. The sensor becomes a Lazarus, for example a temperature measuring device (thermometer). More applications can be programmed with a freely available development environment, see https://github.com/diafyt/lazarus for further information.</string>
    <string name="about_heading_3">Rights</string>
    <string name="about_paragraph_3_1">Freestyle, Libre, and associated trademarks are registered trademarks of Abbott Diabetes Care Inc.</string>
    <string name="about_paragraph_3_2">Lazarus is open source software. Lazarus is licensed under the Apache License 2.0 (see http://www.apache.org/licenses/ for further information).</string>
    <string name="about_heading_4">Intended Use</string>
    <string name="about_paragraph_4_1">The Lazarus Thermometer App is not a medical device. Use for medical purposes is not intended.</string>
    <string name="about_heading_5">Disclaimer</string>
    <string name="about_paragraph_5_1">Diafyt Lazarus is provided \"as is\" without any warranties or claims of fitness.</string>
    <string name="snackbar_programming_error">Tag reprogramming failed.</string>
    <string name="message_confirm_self_overwrite">This sensor has alredy been reprogrammed to be a thermometer. Overwrite the previous programming?</string>
</resources>
